added basic info of API

--- a/documentation.html
+++ b/documentation.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Documentation about this movie api</h1>
-        <p>In this movie api there will be multiple things done.
+        <h1>MOVIE API</h1>
+        <p>This movie API will allow users to sign up, create a list of their favourite movies, change their personal information, as well as accessing general information of different movies.
         </p>
     </body>
 </html>
