--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Movie app</h1>
-        <p>This will be the 'server side' of the movie app to be.</p>
+        <h1>Movie API</h1>
+        <p>This will be the 'server side' for the movie API.</p>
     </body>
 </html>
