added endpoints documentation

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -26,6 +26,26 @@
                 </tr>
             </thead>
             <tbody>
+              <tr>
+                <td>Greeting endpoint</td>
+                <td>/</td>
+                <td>GET</td>
+                <td>-</td>
+                <td>-</td>
+                <td>A text message containing a greeting message</td>
+              </tr>
+            </tbody>
+            <tbody>
+              <tr>
+                <td>Login a user</td>
+                <td>/login</td>
+                <td>POST</td>
+                <td>-</td>
+                <td>-</td>
+                <td>A JSON object allowing an existing user to login</td>
+              </tr>
+            </tbody>
+            <tbody>
                 <tr>
                     <td>Returns all movies</td>
                     <td>/movies</td>
@@ -72,7 +92,7 @@
                 </tr>
           
                 <tr>
-                  <td>Allows users to update users name</td>
+                  <td>Allows users to update users information</td>
                   <td>/users/:Username</td>
                   <td>PUT</td>
                   <td>:Username</td>
